--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.1",
+    "@openzeppelin/contracts": "^4.8.1",
     "@prb/math": "^3.1.0",
-    "hardhat": "^2.12.6"
+    "hardhat": "^2.12.6",
+    "prettier-plugin-solidity": "^1.1.1"
   }
 }
